Fix ngx-gallery z-index and closing
Closes #136

--- a/client/src/app/pages/dashboard/maps/map-info/map-info.component.scss
+++ b/client/src/app/pages/dashboard/maps/map-info/map-info.component.scss
@@ -12,6 +12,10 @@ map-leaderboard {
   min-height: 300px;
 }
 
+.bury {
+  z-index: 500;
+}
+
 .library-stats {
   margin-left: 43%;
 }
